# FOnline-BraveNewWorld

./: .gitattributes  .gitignore  PID_LIST_TMP.txt  README.md  task-list.txt
PReloaded/: .gitattributes  .gitignore  README.md
PReloaded/Client/: DataFiles.cfg  DataFilesReloaded.cfg  FOnline.cfg  FOnline2238.cfg  GMTButtons.txt  PublicNameColorizing.txt  Reloaded.cfg
PReloaded/Mapper/: Mapper.cfg  ReadMe_en.txt  tabs.cfg
PReloaded/Server/: Clean.bat  Server.cfg  clean-older-binaries-only.bat  del compiled maps.bat  del compiled scripts'n'maps.bat  del compiled scripts.bat
foclassic/ClientUnitTest/: ClientUnitTest.cpp  ClientUnitTest.vcxproj  ClientUnitTest.vcxproj.filters
foclassic/Source/: CMakeLists.txt  Client.cpp  Client.h  ClientInterface.cpp  ClientInterfaceDialog.cpp  ClientInterface_MessBox.cpp  CraftManager.cpp  CraftManager.h  Critter.cpp  Critter.h  CritterCl.cpp  CritterCl.h  Defence.h  FontManager.cpp  FontManager.h  HexManager.cpp  HexManager.h  ItemHex.cpp  ItemHex.h  ItemManager.cpp  ItemManager.h  MainClient.cpp  MsgStr.h  QuestManager.cpp  QuestManager.h  Server.cpp  (+6 more)
foclassic/Source/Libs/angelscript-preprocessor/: CMakeLists.txt  preprocessor.cpp  preprocessor.h
foclassic/Source/Libs/angelscript-preprocessor/examples/: CMakeLists.txt  dependencies.cpp  minipreprocessor.cpp  pragma.cpp  utils.h
foclassic/Source/Libs/angelscript-preprocessor/examples/script/: file.as  pragma.as
foclassic/Source/Libs/angelscript-preprocessor/examples/script/dir1/: file1.as
foclassic/Source/Libs/angelscript-preprocessor/examples/script/dir2/: file2.as
(+6308 files in other folders)
